--- a/languages/pta_volunteer_sus-es_ES.po
+++ b/languages/pta_volunteer_sus-es_ES.po
@@ -2,9 +2,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PTA Volunteer Sign Up Sheets\n"
 "POT-Creation-Date: 2014-03-13 08:58-0800\n"
-"PO-Revision-Date: 2014-03-14 13:16-0500\n"
+"PO-Revision-Date: 2014-03-15 06:14-0500\n"
 "Last-Translator: Simon Samson <contact@sitestraduction.com>\n"
-"Language-Team: Stephen Sherrard <stephen@dbar-productions.com>\n"
+"Language-Team: Simon Samson <contact@sitestraduction.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -933,7 +933,7 @@ msgid ""
 "Puts Volunteer Sign-up Sheet system in test mode. Only admin level users can "
 "view public side sign-up sheets."
 msgstr ""
-"Pone el sistema Hoja de Iinscripción de Voluntario en modo de prueba. Sólo "
+"Pone el sistema Hoja de Inscripción de Voluntario en modo de prueba. Sólo "
 "los usuarios de nivel de administrador pueden ver las hojas de inscripción "
 "del lado del público."
 
